--- a/index.html
+++ b/index.html
@@ -10,11 +10,40 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
+
     </head>
     <body>
 
-        <h1> Kunal Salvi </h1>
+        <header class="main-header">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images/unnamed.png" alt="logo">
+                </a>
+            </div>
+
+            <div class="nav-desktop-menu">
+                <ul>
+                    <li>
+                        <a href="hardwareprojects.html">Hardware Projects</a>
+                    </li>
+                    <li>
+                        <a href="firmwareprojects.html">Firmware Projects</a>
+                    </li>
+                    <li>
+                        <a href="CADprojects.html">CAD Projects</a>
+                    </li>
+                    <li>
+                        <a href="workexp.html">Work Experience</a>
+                    </li>
+                    <li>
+                        <a href="education.html">Education Qualification</a>
+                    </li>
+
+                </ul>
+            </div>
+
+        </header>
         
         
         <script src="" async defer></script>
